@@ -26,7 +26,8 @@ JUnit repository on GitHub.
 [[release-notes-5.11.1-junit-platform-new-features-and-improvements]]
 ==== New Features and Improvements
 
-* ❓
+* Introduce `ReflectionSupport.makeAccessible(Field)` for third-party use rather than
+  calling the internal `ReflectionUtils.makeAccessible(Field)` method directly.
 
 
 [[release-notes-5.11.1-junit-jupiter]]
